--- a/Home/contact.html
+++ b/Home/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa-Home</title>
+    <title>Villa-Contact</title>
     <link rel="stylesheet" href="./contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -37,7 +37,7 @@
                 <a href="index.html">Home</a>
                 <a href="properties.html">Properties</a>
                 <a href="detail.html">Property details</a>
-                <a href="contact.html" class="conta">Contact us</a>
+                <a href="contact.html" class="conta"  target="_top">Contact us</a>
             </div>
             <div class="button">
                 <a href="#" class="custom-btn">
