--- a/Home/index.html
+++ b/Home/index.html
@@ -33,7 +33,7 @@
 
             </div>
             <div class="navlinks">
-                <a href="index.html" class="home">Home</a>
+                <a href="index.html" class="home"  target="_top">Home</a>
                 <a href="properties.html">Properties</a>
                 <a href="detail.html">Property details</a>
                 <a href="contact.html">Contact us</a>
