--- a/Home/properties.html
+++ b/Home/properties.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Villa-Home</title>
+  <title>Villa-Properties</title>
   <link rel="stylesheet" href="./properties.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -34,7 +34,7 @@
       </div>
       <div class="navlinks">
         <a href="index.html">Home</a>
-        <a href="properties.html" class="property">Properties</a>
+        <a href="properties.html" class="property"  target="_top">Properties</a>
         <a href="detail.html">Property details</a>
         <a href="contact.html">Contact us</a>
       </div>
