--- a/Home/detail.html
+++ b/Home/detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa-Home</title>
+    <title>Villa-Propertey details</title>
     <link rel="stylesheet" href="./detail.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -35,7 +35,7 @@
             <div class="navlinks">
                 <a href="index.html">Home</a>
                 <a href="properties.html">Properties</a>
-                <a href="detail.html" class="detail">Property details</a>
+                <a href="detail.html" class="detail"  target="_top">Property details</a>
                 <a href="contact.html">Contact us</a>
             </div>
             <div class="button">
