--- a/Home/index.html
+++ b/Home/index.html
@@ -26,14 +26,14 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
     </header>
-    <header>
+    <header class="villa-header">
         <section class="navbar">
             <div class="villa">
                 <h1>VILLA</h1>
 
             </div>
             <div class="navlinks">
-                <a href="index.html" class="home"  target="_top">Home</a>
+                <a href="index.html" class="home" target="_top">Home</a>
                 <a href="properties.html">Properties</a>
                 <a href="detail.html">Property details</a>
                 <a href="contact.html">Contact us</a>
@@ -69,14 +69,19 @@
         <div class="main-section">
             <div class="left-content">
                 <img src="./Assests/featured.jpg" alt="Interior Image">
+                <div class="side-corner">
+                    <img src="https://templatemo.com/templates/templatemo_591_villa_agency/assets/images/featured-icon.png"
+                        alt="side image">
+                </div>
             </div>
+
 
             <div class="center-content">
                 <p class="tag">| FEATURED</p>
                 <h2>Best Appartment & Sea View</h2>
                 <div class="faq-box">
                     <div class="faq">Best useful links ? </div>
-                    <pre>    Get the best villa website template in HTML CSS and
+                    <pre style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" ;>    Get the best villa website template in HTML CSS and
     Bootstrap for your business. TemplateMo provides you the
     best free CSS templates in the world. Please tell your
     friends about it.</pre>
@@ -319,30 +324,30 @@
             <h2 class="yogi">Get In Touch With<br>Our Agents</h2>
 
 
-            
-                <div class="container">
-                    <div class="map-box">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d67302.95905679312!2d78.38101017610043!3d17.485487837630853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1753875887536!5m2!1sen!2sin"
-                            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
+
+            <div class="container">
+                <div class="map-box">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d67302.95905679312!2d78.38101017610043!3d17.485487837630853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1753875887536!5m2!1sen!2sin"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="form-box">
-                    <form>
-                        <label for="name">Full Name</label>
-                        <input type="text" id="name"placeholder="Your Name" required />
-                        <label for="email">Email Address</label>
-                        <input type="email"id="email" placeholder="Your Email" required />
-                        <label for="subject">Subject</label>
-                        <input type="text"id="subject" placeholder="Subject" required />
-                        <label for="message">Message</label>
-                        <textarea placeholder="Your Message" rows="4" required></textarea>
-                        <button type="submit">Send Message</button>
-                    </form>
-                </div>
+            </div>
+            <div class="form-box">
+                <form>
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" placeholder="Your Name" required />
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" placeholder="Your Email" required />
+                    <label for="subject">Subject</label>
+                    <input type="text" id="subject" placeholder="Subject" required />
+                    <label for="message">Message</label>
+                    <textarea placeholder="Your Message" rows="4" required></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
         </div>
     </section><br><br><br><br><br><br><br>
-    
+
     <div class="info-boxes">
         <div class="info-box">
             <img src="./Assests/phone-icon.png" alt="phone">
@@ -353,7 +358,7 @@
             <p><strong>info@villa.co</strong><br>Business Email</p>
         </div>
     </div>
-   
+
 
     <footer class="footer">
         Copyright © 2048 Villa Agency Co., Ltd. All rights reserved.
