--- a/Home/contact.html
+++ b/Home/contact.html
@@ -27,7 +27,7 @@
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
     </header>
-    <header>
+    <header class="villa-house">
         <section class="navbar">
             <div class="villa">
                 <h1>VILLA</h1>
@@ -37,7 +37,7 @@
                 <a href="index.html">Home</a>
                 <a href="properties.html">Properties</a>
                 <a href="detail.html">Property details</a>
-                <a href="contact.html" class="conta"  target="_top">Contact us</a>
+                <a href="contact.html" class="conta" target="_top">Contact us</a>
             </div>
             <div class="button">
                 <a href="#" class="custom-btn">
@@ -48,75 +48,76 @@
                 </a>
             </div>
         </section>
-        <section class="banner"><br><br><br><br><br><br><br>
-            <div class="main-bar">
-                <div class="box">
-                    <h1 class="props">
-                        HOME/CONTACT US
-                    </h1>
-                    <h2>
-                        CONTACT US
-                    </h2>
-                </div>
-
-            </div>
-        </section>
-        <section class="contact-section">
-            <div class="contact-container">
-                <div class="contact-info">
-                    <span class="section-label">| Contact Us</span>
-                    <h2>Get In Touch<br>With Our Agents</h2>
-                    <p>
-                        When you really need to download free CSS templates, please remember our website TemplateMo.
-                        Also, tell your friends about our website. Thank you for visiting. There is a variety of
-                        Bootstrap HTML CSS templates on our website.
-                        If you need more information, please contact us.
-                    </p>
-
-                    <div class="contact-box">
-                        <i class="fa-solid fa-phone-volume"></i>
-                        <div>
-                            <strong>010-020-0340</strong><br>
-                            <small>Phone Number</small>
-                        </div>
-                    </div>
-
-                    <div class="contact-box">
-                        <i class="fa-solid fa-envelope"></i>
-                        <div>
-                            <strong>info@villa.co</strong><br>
-                            <small>Business Email</small>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="form-box">
-                    <form>
-                        <label for="name">Full Name</label>
-                        <input type="text" placeholder="Your Name" required />
-                        <label for="email">Email Address</label>
-                        <input type="email" placeholder="Your Email" required />
-                        <label for="subject">Subject</label>
-                        <input type="text" placeholder="Subject" required />
-                        <label for="message">Message</label>
-                        <textarea placeholder="Your Message" rows="4" required></textarea>
-                        <button type="submit">Send Message</button>
-                    </form>
-                </div>
-            </div>
-
-        </section>
-        <section class="contact-section">
-            <div class="container">
-                <div class="map-box">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d67302.95905679312!2d78.38101017610043!3d17.485487837630853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1753875887536!5m2!1sen!2sin"
-                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
-        </section>
     </header>
+    <section class="banner"><br><br><br><br><br><br><br>
+        <div class="main-bar">
+            <div class="box">
+                <h1 class="props">
+                    HOME/CONTACT US
+                </h1>
+                <h2>
+                    CONTACT US
+                </h2>
+            </div>
+
+        </div>
+    </section>
+    <section class="contact-section">
+        <div class="contact-container">
+            <div class="contact-info">
+                <span class="section-label">| Contact Us</span>
+                <h2>Get In Touch<br>With Our Agents</h2>
+                <p>
+                    When you really need to download free CSS templates, please remember our website TemplateMo.
+                    Also, tell your friends about our website. Thank you for visiting. There is a variety of
+                    Bootstrap HTML CSS templates on our website.
+                    If you need more information, please contact us.
+                </p>
+
+                <div class="contact-box">
+                    <i class="fa-solid fa-phone-volume"></i>
+                    <div>
+                        <strong>010-020-0340</strong><br>
+                        <small>Phone Number</small>
+                    </div>
+                </div>
+
+                <div class="contact-box">
+                    <i class="fa-solid fa-envelope"></i>
+                    <div>
+                        <strong>info@villa.co</strong><br>
+                        <small>Business Email</small>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="form-box">
+                <form>
+                    <label for="name">Full Name</label>
+                    <input type="text" placeholder="Your Name" required />
+                    <label for="email">Email Address</label>
+                    <input type="email" placeholder="Your Email" required />
+                    <label for="subject">Subject</label>
+                    <input type="text" placeholder="Subject" required />
+                    <label for="message">Message</label>
+                    <textarea placeholder="Your Message" rows="4" required></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+        </div>
+
+    </section>
+    <section class="contact-section">
+        <div class="container">
+            <div class="map-box">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d67302.95905679312!2d78.38101017610043!3d17.485487837630853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1753875887536!5m2!1sen!2sin"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         Copyright © 2048 Villa Agency Co., Ltd. All rights reserved.
         Design: <a href="https://templatemo.com" target="_blank">TemplateMo</a>
