--- a/Home/properties.html
+++ b/Home/properties.html
@@ -26,7 +26,7 @@
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
       </div>
   </header>
-  <header>
+  <header class="villa-house">
     <section class="navbar">
       <div class="villa">
         <h1>VILLA</h1>
@@ -34,7 +34,7 @@
       </div>
       <div class="navlinks">
         <a href="index.html">Home</a>
-        <a href="properties.html" class="property"  target="_top">Properties</a>
+        <a href="properties.html" class="property" target="_top">Properties</a>
         <a href="detail.html">Property details</a>
         <a href="contact.html">Contact us</a>
       </div>
@@ -47,180 +47,182 @@
         </a>
       </div>
     </section>
-    <section class="banner"><br><br><br><br><br><br><br>
-      <div class="main-bar">
-        <div class="box">
-          <h1 class="props">
-            HOME/PROPERTIES
-          </h1>
-          <h2>
-            PROPERTIES
-          </h2>
-        </div>
-
-      </div>
-    </section><br><br><br><br>
-    <section>
-      <div class="types">
-        <a href="#">Show All</a>
-        <a href="#">Apartment</a>
-        <a href="#">Villa House</a>
-        <a href="#">Pent House</a>
-      </div>
-    </section>
-    <section class="property-grid">
-      <!-- Card 1 -->
-      <div class="property-card">
-        <img src="./Assests/property-01.jpg" alt="Property 1">
-        <span class="tag">Luxury Villa</span>
-        <h3>$2,264,000</h3>
-        <p><strong>18 Old Street Miami, OR 97219</strong></p>
-        <ul>
-          <li>Bedrooms: 8</li>
-          <li>Bathrooms: 8</li>
-          <li>Area: 545m²</li>
-          <li>Floors: 3</li>
-          <li>Parking: 6 spots</li>
-        </ul>
-        <button>Schedule a visit</button>
+  </header>
+  <section class="banner"><br><br><br><br><br><br><br>
+    <div class="main-bar">
+      <div class="box">
+        <h1 class="props">
+          HOME/PROPERTIES
+        </h1>
+        <h2>
+          PROPERTIES
+        </h2>
       </div>
 
-
-      <div class="property-card">
-        <img src="./Assests/property-02.jpg" alt="Property 2">
-        <span class="tag">Luxury Villa</span>
-        <h3>$1,180,000</h3>
-        <p><strong>54 New Street Florida, OR 27001</strong></p>
-        <ul>
-          <li>Bedrooms: 6</li>
-          <li>Bathrooms: 5</li>
-          <li>Area: 460m²</li>
-          <li>Floors: 3</li>
-          <li>Parking: 8 spots</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
-
-      <div class="property-card">
-        <img src="./Assests/deal-03.jpg" alt="Property 3">
-        <span class="tag">Luxury Villa</span>
-        <h3>$1,460,000</h3>
-        <p><strong>26 Mid Street Portland, OR 38540</strong></p>
-        <ul>
-          <li>Bedrooms: 5</li>
-          <li>Bathrooms: 4</li>
-          <li>Area: 225m²</li>
-          <li>Floors: 3</li>
-          <li>Parking: 10 spots</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
-
-      <div class="property-card">
-        <img src="./Assests/property-04.jpg" alt="Property 4">
-        <span class="tag">Apartment</span>
-        <h3>$584,500</h3>
-        <p><strong>12 Hope Street Portland, OR 12650</strong></p>
-        <ul>
-          <li>Bedrooms: 4</li>
-          <li>Bathrooms: 3</li>
-          <li>Area: 125m²</li>
-          <li>Floor: 25th</li>
-          <li>Parking: 2 cars</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
-
-      <div class="property-card">
-        <img src="./Assests/property-05.jpg" alt="Property 5">
-        <span class="tag">Penthouse</span>
-        <h3>$925,600</h3>
-        <p><strong>34 Hope Street Portland, OR 42680</strong></p>
-        <ul>
-          <li>Bedrooms: 4</li>
-          <li>Bathrooms: 4</li>
-          <li>Area: 180m²</li>
-          <li>Floor: 38th</li>
-          <li>Parking: 3 cars</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
-
-      <div class="property-card">
-        <img src="./Assests/property-06.jpg" alt="Property 6">
-        <span class="tag">Modern Condo</span>
-        <h3>$450,000</h3>
-        <p><strong>22 Hope Street Portland, OR 16540</strong></p>
-        <ul>
-          <li>Bedrooms: 3</li>
-          <li>Bathrooms: 2</li>
-          <li>Area: 165m²</li>
-          <li>Floor: 26th</li>
-          <li>Parking: 3 cars</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
+    </div>
+  </section>
+  <br><br><br><br>
+  <section>
+    <div class="types">
+      <a href="#">Show All</a>
+      <a href="#">Apartment</a>
+      <a href="#">Villa House</a>
+      <a href="#">Pent House</a>
+    </div>
+  </section>
+  <section class="property-grid">
+    <!-- Card 1 -->
+    <div class="property-card">
+      <img src="./Assests/property-01.jpg" alt="Property 1">
+      <span class="tag">Luxury Villa</span>
+      <h3>$2,264,000</h3>
+      <p><strong>18 Old Street Miami, OR 97219</strong></p>
+      <ul>
+        <li>Bedrooms: 8</li>
+        <li>Bathrooms: 8</li>
+        <li>Area: 545m²</li>
+        <li>Floors: 3</li>
+        <li>Parking: 6 spots</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
 
 
-      <div class="property-card">
-        <img src="./Assests/property7.jpg" alt="Property 7">
-        <span class="tag">Luxury Villa</span>
-        <h3>$1,460,000</h3>
-        <p><strong>26 Mid Street Portland, OR 38540</strong></p>
-        <ul>
-          <li>Bedrooms: 5</li>
-          <li>Bathrooms: 4</li>
-          <li>Area: 225m²</li>
-          <li>Floors: 3</li>
-          <li>Parking: 10 spots</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
+    <div class="property-card">
+      <img src="./Assests/property-02.jpg" alt="Property 2">
+      <span class="tag">Luxury Villa</span>
+      <h3>$1,180,000</h3>
+      <p><strong>54 New Street Florida, OR 27001</strong></p>
+      <ul>
+        <li>Bedrooms: 6</li>
+        <li>Bathrooms: 5</li>
+        <li>Area: 460m²</li>
+        <li>Floors: 3</li>
+        <li>Parking: 8 spots</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
 
-      <div class="property-card">
-        <img src="./Assests/property8.jpg" alt="Property 8">
-        <span class="tag">Luxury Villa</span>
-        <h3>$1,180,000</h3>
-        <p><strong>54 New Street Florida, OR 27001</strong></p>
-        <ul>
-          <li>Bedrooms: 6</li>
-          <li>Bathrooms: 5</li>
-          <li>Area: 460m²</li>
-          <li>Floors: 3</li>
-          <li>Parking: 8 spots</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
+    <div class="property-card">
+      <img src="./Assests/deal-03.jpg" alt="Property 3">
+      <span class="tag">Luxury Villa</span>
+      <h3>$1,460,000</h3>
+      <p><strong>26 Mid Street Portland, OR 38540</strong></p>
+      <ul>
+        <li>Bedrooms: 5</li>
+        <li>Bathrooms: 4</li>
+        <li>Area: 225m²</li>
+        <li>Floors: 3</li>
+        <li>Parking: 10 spots</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
 
-      <div class="property-card">
-        <img src="./Assests/property9.jpg" alt="Property 9">
-        <span class="tag">Luxury Villa</span>
-        <h3>$2,264,000</h3>
-        <p><strong>18 Old Street Miami, OR 97219</strong></p>
-        <ul>
-          <li>Bedrooms: 8</li>
-          <li>Bathrooms: 8</li>
-          <li>Area: 545m²</li>
-          <li>Floors: 3</li>
-          <li>Parking: 6 spots</li>
-        </ul>
-        <button>Schedule a visit</button>
-      </div>
+    <div class="property-card">
+      <img src="./Assests/property-04.jpg" alt="Property 4">
+      <span class="tag">Apartment</span>
+      <h3>$584,500</h3>
+      <p><strong>12 Hope Street Portland, OR 12650</strong></p>
+      <ul>
+        <li>Bedrooms: 4</li>
+        <li>Bathrooms: 3</li>
+        <li>Area: 125m²</li>
+        <li>Floor: 25th</li>
+        <li>Parking: 2 cars</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
 
-    </section><br><br>
-    <section>
-      <div class="pages">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">>></a>    
-      </div>
-    </section>
-  </header> <br><br><br><br>
-    <footer class="footer">
-        Copyright © 2048 Villa Agency Co., Ltd. All rights reserved.
-        Design: <a href="https://templatemo.com" target="_blank">TemplateMo</a>
-    </footer>
+    <div class="property-card">
+      <img src="./Assests/property-05.jpg" alt="Property 5">
+      <span class="tag">Penthouse</span>
+      <h3>$925,600</h3>
+      <p><strong>34 Hope Street Portland, OR 42680</strong></p>
+      <ul>
+        <li>Bedrooms: 4</li>
+        <li>Bathrooms: 4</li>
+        <li>Area: 180m²</li>
+        <li>Floor: 38th</li>
+        <li>Parking: 3 cars</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
+
+    <div class="property-card">
+      <img src="./Assests/property-06.jpg" alt="Property 6">
+      <span class="tag">Modern Condo</span>
+      <h3>$450,000</h3>
+      <p><strong>22 Hope Street Portland, OR 16540</strong></p>
+      <ul>
+        <li>Bedrooms: 3</li>
+        <li>Bathrooms: 2</li>
+        <li>Area: 165m²</li>
+        <li>Floor: 26th</li>
+        <li>Parking: 3 cars</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
+
+
+    <div class="property-card">
+      <img src="./Assests/property7.jpg" alt="Property 7">
+      <span class="tag">Luxury Villa</span>
+      <h3>$1,460,000</h3>
+      <p><strong>26 Mid Street Portland, OR 38540</strong></p>
+      <ul>
+        <li>Bedrooms: 5</li>
+        <li>Bathrooms: 4</li>
+        <li>Area: 225m²</li>
+        <li>Floors: 3</li>
+        <li>Parking: 10 spots</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
+
+    <div class="property-card">
+      <img src="./Assests/property8.jpg" alt="Property 8">
+      <span class="tag">Luxury Villa</span>
+      <h3>$1,180,000</h3>
+      <p><strong>54 New Street Florida, OR 27001</strong></p>
+      <ul>
+        <li>Bedrooms: 6</li>
+        <li>Bathrooms: 5</li>
+        <li>Area: 460m²</li>
+        <li>Floors: 3</li>
+        <li>Parking: 8 spots</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
+
+    <div class="property-card">
+      <img src="./Assests/property9.jpg" alt="Property 9">
+      <span class="tag">Luxury Villa</span>
+      <h3>$2,264,000</h3>
+      <p><strong>18 Old Street Miami, OR 97219</strong></p>
+      <ul>
+        <li>Bedrooms: 8</li>
+        <li>Bathrooms: 8</li>
+        <li>Area: 545m²</li>
+        <li>Floors: 3</li>
+        <li>Parking: 6 spots</li>
+      </ul>
+      <button>Schedule a visit</button>
+    </div>
+
+  </section><br><br>
+  <section>
+    <div class="pages">
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">>></a>
+    </div>
+  </section>
+  <br><br><br><br>
+  <footer class="footer">
+    Copyright © 2048 Villa Agency Co., Ltd. All rights reserved.
+    Design: <a href="https://templatemo.com" target="_blank">TemplateMo</a>
+  </footer>
 </body>
 
 </html>
